fix overlapping img, container size

--- a/client/src/components/Main/styles/CartItem.css
+++ b/client/src/components/Main/styles/CartItem.css
@@ -8,7 +8,7 @@
 	border: 1px solid lightgray;
 	display: grid;
 	grid-template-columns: 2fr 3fr 1fr;
-	height: 240px;
+	height: 250px;
 	position: relative;
 }
 .cart-item img {
@@ -25,6 +25,7 @@
 	text-align: end;
 	width: 300px;
 	padding-bottom: 1rem;
+	height: 240px;
 }
 .cart-item-explanations p {
 	color: black;
